small corrections, position alignments

--- a/other_way/styles/style1.css
+++ b/other_way/styles/style1.css
@@ -374,7 +374,8 @@ body{
   font-size: 30px;
 }
 
-.test {
+.container2 .test {
+  display: inline-block;
   border: 5px solid #FFF;
   border-radius: 10px;
   width: 640px;
